crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__transforms__configured_entry_rule_not_found.snap
---
source: tests/antlr4_rust_gen_cli/transforms.rs
expression: stderr
---
Error: Custom { kind: InvalidInput, error: "error[G4S079]: <grammar>:1:0: configured parser entry rule missing is not defined\n" }
