crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__transforms__configured_mutual_entry_generated_api.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/transforms.rs
expression: api
---
[
    "callback enter_e",
    "callback enter_every_rule",
    "callback enter_s",
    "callback exit_e",
    "callback exit_every_rule",
    "callback exit_s",
    "callback visit_children",
    "callback visit_e",
    "callback visit_error_node",
    "callback visit_rule",
    "callback visit_s",
    "callback visit_terminal",
    "const EOF",
    "const ID",
    "const RULE_E",
    "const RULE_S",
    "const T__0",
    "const WS",
    "fn add_error_listener",
    "fn add_parse_listener",
    "fn child_count",
    "fn clear_dfa",
    "fn compile_parse_tree_pattern",
    "fn direct_terminals",
    "fn e",
    "fn id_token",
    "fn into_parsed_file",
    "fn into_token_store",
    "fn into_token_stream",
    "fn metadata",
    "fn new",
    "fn node",
    "fn parse",
    "fn parse_stream",
    "fn parse_stream_validated",
    "fn parse_stream_with_parser",
    "fn parse_tree_storage",
    "fn parse_validated",
    "fn parse_with_parser",
    "fn parser_atn",
    "fn parser_dfa_stats",
    "fn prediction_context_stats",
    "fn remove_error_listeners",
    "fn remove_parse_listeners",
    "fn reset",
    "fn rule_names",
    "fn rule_node",
    "fn s",
    "fn set_token_stream",
    "fn start",
    "fn text",
    "fn token_store",
    "fn token_stream",
    "fn token_stream_mut",
    "fn validate",
    "fn validate_tree_structure",
    "fn walk",
    "fn walk_with_invocation_states",
    "fn with_hooks",
    "static METADATA",
    "struct ConfiguredMutualEntryParser",
    "struct ConfiguredMutualEntryParserParseOutput",
    "struct ConfiguredMutualEntryTreeWalker",
    "struct ConfiguredMutualEntryValidatedTreeWalker",
    "struct EContext",
    "struct SContext",
    "struct ValidatedTreeContext",
    "trait ConfiguredMutualEntryListener",
    "trait ConfiguredMutualEntryValidatedListener",
    "trait ConfiguredMutualEntryValidatedVisitable",
    "trait ConfiguredMutualEntryValidatedVisitor",
    "trait ConfiguredMutualEntryVisitable",
    "trait ConfiguredMutualEntryVisitor",
    "type ConfiguredMutualEntryValidatedTree",
    "type ConfiguredMutualEntryValidationError",
    "type ParseTreeWalker",
    "type ValidatedParseTreeWalker",
    "type ValidatedRuleNode",
]
