crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__transforms__configured_precedence_entry_generated_api.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/transforms.rs
expression: api
---
[
    "callback enter_atom",
    "callback enter_atom_expression_label",
    "callback enter_conditional_or",
    "callback enter_conditional_or_calc_operator1_label",
    "callback enter_conditional_or_calc_operator2_label",
    "callback enter_conditional_or_conditional_and_loop4_label",
    "callback enter_conditional_or_conditional_or_loop5_label",
    "callback enter_conditional_or_relation_operator3_label",
    "callback enter_direct_entry",
    "callback enter_direct_entry_direct_operator3_label",
    "callback enter_direct_entry_right_base1_label",
    "callback enter_direct_entry_right_right2_label",
    "callback enter_direct_start",
    "callback enter_every_rule",
    "callback enter_expr",
    "callback enter_logical_not_label",
    "callback enter_loose_prefix",
    "callback enter_mixed_start",
    "callback enter_negate_label",
    "callback enter_power",
    "callback enter_primary",
    "callback enter_star_start",
    "callback enter_start",
    "callback enter_sum",
    "callback enter_sum_product_base1_label",
    "callback enter_sum_product_loop2_label",
    "callback enter_sum_sum_loop3_label",
    "callback exit_atom",
    "callback exit_atom_expression_label",
    "callback exit_conditional_or",
    "callback exit_conditional_or_calc_operator1_label",
    "callback exit_conditional_or_calc_operator2_label",
    "callback exit_conditional_or_conditional_and_loop4_label",
    "callback exit_conditional_or_conditional_or_loop5_label",
    "callback exit_conditional_or_relation_operator3_label",
    "callback exit_direct_entry",
    "callback exit_direct_entry_direct_operator3_label",
    "callback exit_direct_entry_right_base1_label",
    "callback exit_direct_entry_right_right2_label",
    "callback exit_direct_start",
    "callback exit_every_rule",
    "callback exit_expr",
    "callback exit_logical_not_label",
    "callback exit_loose_prefix",
    "callback exit_mixed_start",
    "callback exit_negate_label",
    "callback exit_power",
    "callback exit_primary",
    "callback exit_star_start",
    "callback exit_start",
    "callback exit_sum",
    "callback exit_sum_product_base1_label",
    "callback exit_sum_product_loop2_label",
    "callback exit_sum_sum_loop3_label",
    "callback visit_atom",
    "callback visit_atom_expression_label",
    "callback visit_children",
    "callback visit_conditional_or",
    "callback visit_conditional_or_calc_operator1_label",
    "callback visit_conditional_or_calc_operator2_label",
    "callback visit_conditional_or_conditional_and_loop4_label",
    "callback visit_conditional_or_conditional_or_loop5_label",
    "callback visit_conditional_or_relation_operator3_label",
    "callback visit_direct_entry",
    "callback visit_direct_entry_direct_operator3_label",
    "callback visit_direct_entry_right_base1_label",
    "callback visit_direct_entry_right_right2_label",
    "callback visit_direct_start",
    "callback visit_error_node",
    "callback visit_expr",
    "callback visit_logical_not_label",
    "callback visit_loose_prefix",
    "callback visit_mixed_start",
    "callback visit_negate_label",
    "callback visit_power",
    "callback visit_primary",
    "callback visit_rule",
    "callback visit_star_start",
    "callback visit_start",
    "callback visit_sum",
    "callback visit_sum_product_base1_label",
    "callback visit_sum_product_loop2_label",
    "callback visit_sum_sum_loop3_label",
    "callback visit_terminal",
    "const EOF",
    "const INT",
    "const RULE_ATOM",
    "const RULE_CONDITIONAL_OR",
    "const RULE_DIRECT_ENTRY",
    "const RULE_DIRECT_START",
    "const RULE_EXPR",
    "const RULE_LOOSE_PREFIX",
    "const RULE_MIXED_START",
    "const RULE_POWER",
    "const RULE_PRIMARY",
    "const RULE_START",
    "const RULE_STAR_START",
    "const RULE_SUM",
    "const T__0",
    "const T__1",
    "const T__10",
    "const T__11",
    "const T__12",
    "const T__13",
    "const T__14",
    "const T__15",
    "const T__16",
    "const T__17",
    "const T__18",
    "const T__19",
    "const T__2",
    "const T__3",
    "const T__4",
    "const T__5",
    "const T__6",
    "const T__7",
    "const T__8",
    "const T__9",
    "const WS",
    "enum LadderValidationError",
    "fn add_error_listener",
    "fn add_parse_listener",
    "fn atom",
    "fn child_count",
    "fn clear_dfa",
    "fn compile_parse_tree_pattern",
    "fn conditional_or",
    "fn conditional_or_children",
    "fn direct_entry",
    "fn direct_entry_children",
    "fn direct_start",
    "fn direct_terminals",
    "fn downcast_ref",
    "fn e",
    "fn else_branch",
    "fn eof_token",
    "fn expr",
    "fn int_token",
    "fn into_parsed_file",
    "fn into_token_store",
    "fn into_token_stream",
    "fn is_error",
    "fn is_missing",
    "fn la",
    "fn loose_prefix",
    "fn lt",
    "fn metadata",
    "fn mixed_start",
    "fn new",
    "fn node",
    "fn operands",
    "fn operator",
    "fn operators",
    "fn parse",
    "fn parse_stream",
    "fn parse_stream_validated",
    "fn parse_stream_with_parser",
    "fn parse_tree_storage",
    "fn parse_validated",
    "fn parse_with_parser",
    "fn parsed_file",
    "fn parser_atn",
    "fn parser_dfa_stats",
    "fn power",
    "fn prediction_context_stats",
    "fn primary",
    "fn question",
    "fn remove_error_listeners",
    "fn remove_parse_listeners",
    "fn reset",
    "fn rule_index",
    "fn rule_names",
    "fn rule_node",
    "fn set_token_stream",
    "fn star_start",
    "fn start",
    "fn sum",
    "fn sum_children",
    "fn symbol",
    "fn text",
    "fn then_branch",
    "fn token_store",
    "fn token_stream",
    "fn token_stream_mut",
    "fn tree",
    "fn validate",
    "fn validate_tree_structure",
    "fn walk",
    "fn walk_with_invocation_states",
    "fn with_hooks",
    "static METADATA",
    "struct AtomContext",
    "struct AtomExpressionLabelContext",
    "struct ConditionalOrCalcOperator1LabelContext",
    "struct ConditionalOrCalcOperator2LabelContext",
    "struct ConditionalOrConditionalAndLoop4LabelContext",
    "struct ConditionalOrConditionalOrLoop5LabelContext",
    "struct ConditionalOrContext",
    "struct ConditionalOrRelationOperator3LabelContext",
    "struct DirectEntryContext",
    "struct DirectEntryDirectOperator3LabelContext",
    "struct DirectEntryRightBase1LabelContext",
    "struct DirectEntryRightRight2LabelContext",
    "struct DirectStartContext",
    "struct ErrorNode",
    "struct ExprContext",
    "struct LadderParser",
    "struct LadderParserParseOutput",
    "struct LadderTreeWalker",
    "struct LadderValidatedTree",
    "struct LadderValidatedTreeWalker",
    "struct LogicalNotLabelContext",
    "struct LoosePrefixContext",
    "struct MixedStartContext",
    "struct NegateLabelContext",
    "struct PowerContext",
    "struct PrimaryContext",
    "struct StarStartContext",
    "struct StartContext",
    "struct StoredTreeContext",
    "struct SumContext",
    "struct SumProductBase1LabelContext",
    "struct SumProductLoop2LabelContext",
    "struct SumSumLoop3LabelContext",
    "struct TerminalNode",
    "struct ValidatedRuleNode",
    "struct ValidatedTreeContext",
    "struct __GeneratedInput",
    "struct __GeneratedTokenView",
    "trait FromValidatedRuleNode",
    "trait LadderListener",
    "trait LadderValidatedListener",
    "trait LadderValidatedVisitable",
    "trait LadderValidatedVisitor",
    "trait LadderVisitable",
    "trait LadderVisitor",
    "type ParseTreeWalker",
    "type ValidatedParseTreeWalker",
]
