crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__transforms__pruned_unreachable_rule_generated_api.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/transforms.rs
expression: generated_parser_api(&parser)
---
[
    "callback enter_alternate",
    "callback enter_end",
    "callback enter_every_rule",
    "callback enter_live",
    "callback enter_manual",
    "callback enter_script",
    "callback enter_start",
    "callback exit_alternate",
    "callback exit_end",
    "callback exit_every_rule",
    "callback exit_live",
    "callback exit_manual",
    "callback exit_script",
    "callback exit_start",
    "callback visit_alternate",
    "callback visit_children",
    "callback visit_end",
    "callback visit_error_node",
    "callback visit_live",
    "callback visit_manual",
    "callback visit_rule",
    "callback visit_script",
    "callback visit_start",
    "callback visit_terminal",
    "const EOF",
    "const ID",
    "const RULE_ALTERNATE",
    "const RULE_END",
    "const RULE_LIVE",
    "const RULE_MANUAL",
    "const RULE_SCRIPT",
    "const RULE_START",
    "const WS",
    "fn add_error_listener",
    "fn add_parse_listener",
    "fn alternate",
    "fn child_count",
    "fn clear_dfa",
    "fn compile_parse_tree_pattern",
    "fn direct_terminals",
    "fn end",
    "fn eof_token",
    "fn id_token",
    "fn into_parsed_file",
    "fn into_token_store",
    "fn into_token_stream",
    "fn live",
    "fn manual",
    "fn metadata",
    "fn new",
    "fn node",
    "fn parse",
    "fn parse_stream",
    "fn parse_stream_validated",
    "fn parse_stream_with_parser",
    "fn parse_tree_storage",
    "fn parse_validated",
    "fn parse_with_parser",
    "fn parser_atn",
    "fn parser_dfa_stats",
    "fn prediction_context_stats",
    "fn remove_error_listeners",
    "fn remove_parse_listeners",
    "fn reset",
    "fn rule_names",
    "fn rule_node",
    "fn script",
    "fn set_token_stream",
    "fn start",
    "fn text",
    "fn token_store",
    "fn token_stream",
    "fn token_stream_mut",
    "fn validate",
    "fn validate_tree_structure",
    "fn walk",
    "fn walk_with_invocation_states",
    "fn with_hooks",
    "static METADATA",
    "struct AlternateContext",
    "struct EndContext",
    "struct LiveContext",
    "struct ManualContext",
    "struct ReachabilityParser",
    "struct ReachabilityTreeWalker",
    "struct ReachabilityValidatedTreeWalker",
    "struct ScriptContext",
    "struct StartContext",
    "struct ValidatedTreeContext",
    "trait ReachabilityListener",
    "trait ReachabilityValidatedListener",
    "trait ReachabilityValidatedVisitable",
    "trait ReachabilityValidatedVisitor",
    "trait ReachabilityVisitable",
    "trait ReachabilityVisitor",
    "type ParseTreeWalker",
    "type ReachabilityParserParseOutput",
    "type ReachabilityValidatedTree",
    "type ReachabilityValidationError",
    "type ValidatedParseTreeWalker",
    "type ValidatedRuleNode",
]
