crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__transforms__recursive_eof_entry_component_generated_api.snap
---
source: crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/transforms.rs
expression: api
---
[
    "callback enter_a",
    "callback enter_b",
    "callback enter_every_rule",
    "callback enter_junk",
    "callback exit_a",
    "callback exit_b",
    "callback exit_every_rule",
    "callback exit_junk",
    "callback visit_a",
    "callback visit_b",
    "callback visit_children",
    "callback visit_error_node",
    "callback visit_junk",
    "callback visit_rule",
    "callback visit_terminal",
    "const EOF",
    "const ID",
    "const RULE_A",
    "const RULE_B",
    "const RULE_JUNK",
    "const T__0",
    "const T__1",
    "const WS",
    "fn a",
    "fn add_error_listener",
    "fn add_parse_listener",
    "fn b",
    "fn child_count",
    "fn clear_dfa",
    "fn compile_parse_tree_pattern",
    "fn direct_terminals",
    "fn eof_token",
    "fn id_token",
    "fn into_parsed_file",
    "fn into_token_store",
    "fn into_token_stream",
    "fn junk",
    "fn metadata",
    "fn new",
    "fn node",
    "fn parse",
    "fn parse_stream",
    "fn parse_stream_validated",
    "fn parse_stream_with_parser",
    "fn parse_stream_with_parser_constructor",
    "fn parse_tree_storage",
    "fn parse_validated",
    "fn parse_with_parser",
    "fn parse_with_parser_constructor",
    "fn parser_atn",
    "fn parser_dfa_stats",
    "fn prediction_context_stats",
    "fn remove_error_listeners",
    "fn remove_parse_listeners",
    "fn reset",
    "fn rule_names",
    "fn rule_node",
    "fn set_token_stream",
    "fn start",
    "fn text",
    "fn token_store",
    "fn token_stream",
    "fn token_stream_mut",
    "fn validate",
    "fn validate_tree_structure",
    "fn walk",
    "fn walk_with_invocation_states",
    "fn with_hooks",
    "static METADATA",
    "struct AContext",
    "struct BContext",
    "struct JunkContext",
    "struct RecursiveEntriesParser",
    "struct RecursiveEntriesTreeWalker",
    "struct RecursiveEntriesValidatedTreeWalker",
    "struct ValidatedTreeContext",
    "trait RecursiveEntriesListener",
    "trait RecursiveEntriesValidatedListener",
    "trait RecursiveEntriesValidatedVisitable",
    "trait RecursiveEntriesValidatedVisitor",
    "trait RecursiveEntriesVisitable",
    "trait RecursiveEntriesVisitor",
    "type ParseTreeWalker",
    "type RecursiveEntriesParserParseOutput",
    "type RecursiveEntriesValidatedTree",
    "type RecursiveEntriesValidationError",
    "type ValidatedParseTreeWalker",
    "type ValidatedRuleNode",
]
